# slack-timecard-hs

./: .gitignore  README.md  slack-timecard-hs.cabal  stack.yaml
app/: Main.hs  SlackKey.hs  SlackOAuth.hs  SlackPipe.hs  Types.hs  WSSClient.hs  WussMain.hs
