name:                slack-timecard-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/slack-timecard-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable slack-timecard-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:     Types
  build-depends:       base
                     , base-prelude
                     , bytestring
                     , uri-bytestring
                     , text >= 1.2.2.2
                     , time >= 1.6
                     , lens
                     , aeson
                     , wuss
                     , warp >= 3.2.13
                     , mtl >= 2.2.1
                     , websockets
                     , linklater >= 4.0.0.0
                     , slack-timecard-hs
  default-language:    Haskell2010

executable wuss-main
  hs-source-dirs:      app
  main-is:             WussMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text >= 1.2.2.2
                     , wuss
                     , websockets
  default-language:    Haskell2010

test-suite slack-timecard-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-timecard-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/slack-timecard-hs
