name:                slack-timecard-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/slack-timecard-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable slack-timecard-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Types
                     , SlackKey
                     , SlackOAuth
  build-depends:       base
                     , aeson
                     , base-prelude
                     , bytestring
                     , containers
                     , hoauth2
                     , hlint
                     , http-conduit
                     , http-types     >= 0.9    && < 0.10
                     , lens
                     , linklater >= 4.0.0.0
                     , mtl >= 2.2.1
                     , slack-timecard-hs
                     , string-conversions
                     , text           >= 1.2.2.2
                     , time >= 1.6
                     , uri-bytestring
                     , wai            >= 3.2 && < 3.3
                     , warp           >= 3.2.13
                     , websockets
                     , wuss
  default-language:    Haskell2010

test-suite slack-timecard-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-timecard-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/slack-timecard-hs
